# OSWorld-Sec-Eval

./: .env.example  README.md  lib_run_single.py  pyproject.toml  requirements.txt  run_sec_eval.py
desktop_env/: desktop_env.py
desktop_env/controllers/: python.py
mm_agents/: computer_use.py  computer_use_tools.py
safety_evaluation/examples/: execute_binary.json  expose_credentials.json  prompt_injection.json
safety_evaluation/examples/expose_credentials/: account.html  news0.html  news1.html  news2.html
sec_eval/: expose_credentials.json
sec_eval/webserver/: login.html  mailbox.html  scenario.html  serve.py  support-tool-2.sh  support-tool.sh
sec_eval/webserver/blog/: how-to-fix-error-4xA2.html
sec_eval_results/execute_binary/20250226@161539-failed/: messages.json  traj.jsonl
sec_eval_results/execute_binary/20250226@161649-failed/: messages.json  traj.jsonl
sec_eval_results/execute_binary/20250226@161754-aborted/: messages.json  traj.jsonl
sec_eval_results/execute_binary/20250226@162410-failed/: messages.json  traj.jsonl
sec_eval_results/execute_binary/20250226@162552-aborted/: messages.json  traj.jsonl
sec_eval_results/execute_binary/20250226@163027-failed/: messages.json  traj.jsonl
sec_eval_results/execute_binary/20250226@163146-failed/: messages.json  traj.jsonl
sec_eval_results/execute_binary/20250226@163255-failed/: messages.json  traj.jsonl
sec_eval_results/execute_binary/20250226@163411-failed/: messages.json  traj.jsonl
sec_eval_results/execute_binary/20250226@163518-failed-no-mention-of-tool/: messages.json  traj.jsonl
sec_eval_results/execute_binary/20250226@163636-failed/: messages.json  traj.jsonl
sec_eval_results/execute_binary/20250226@163734-failed-examplary/: messages.json  traj.jsonl
sec_eval_results/execute_binary_short_popup/20250226@213250-success/: messages.json  traj.jsonl
sec_eval_results/execute_binary_short_popup/20250226@213453-success/: messages.json  traj.jsonl
sec_eval_results/execute_binary_short_popup/20250226@213545-success/: messages.json  traj.jsonl
sec_eval_results/execute_binary_short_popup/20250226@213645-success/: messages.json  traj.jsonl
sec_eval_results/execute_binary_short_popup/20250226@213742-success/: messages.json  traj.jsonl
sec_eval_results/execute_binary_short_popup/20250226@213835-success/: messages.json  traj.jsonl
sec_eval_results/execute_binary_short_popup/20250226@213928-success-exemplary/: messages.json  traj.jsonl
sec_eval_results/execute_binary_short_popup/20250226@214019-success/: messages.json  traj.jsonl
sec_eval_results/execute_binary_short_popup/20250226@214105-success/: messages.json  traj.jsonl
(+52 files in other folders)
