[project]
name = "osworld"
version = "0.1.0"
description = ""
authors = [
    {name = "Richard Keil",email = "8680858+richartkeil@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "numpy (>=1.26.0,<1.27.0)",
    "pillow (>=11.0.0,<11.1.0)",
    "fabric (>=3.2.2,<4.0.0)",
    "gymnasium (>=0.28.1,<0.29.0)",
    "requests (>=2.31.0,<2.32.0)",
    "transformers (>=4.35.2,<4.36.0)",
    "torch (>=2.5.0,<2.6.0)",
    "accelerate (>=1.3.0,<2.0.0)",
    "opencv-python (>=4.11.0.86,<5.0.0.0)",
    "matplotlib (>=3.7.4,<3.8.0)",
    "pynput (>=1.7.6,<1.8.0)",
    "pyautogui (>=0.9.54,<0.10.0)",
    "psutil (>=5.9.6,<5.10.0)",
    "tqdm (>=4.65.0,<4.66.0)",
    "pandas (>=2.2.3,<2.3.0)",
    "flask (>=3.0.0,<3.1.0)",
    "requests-toolbelt (>=1.0.0,<1.1.0)",
    "lxml (>=5.3.1,<6.0.0)",
    "cssselect (>=1.2.0,<2.0.0)",
    "xmltodict (>=0.14.2,<0.15.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "python-docx (>=1.1.2,<2.0.0)",
    "python-pptx (>=1.0.2,<2.0.0)",
    "pypdf (>=5.3.0,<6.0.0)",
    "pygetwindow (>=0.0.9,<0.0.10)",
    "rapidfuzz (>=3.12.1,<4.0.0)",
    "pyacoustid (>=1.3.0,<2.0.0)",
    "pygame (>=2.6.1,<3.0.0)",
    "imagehash (>=4.3.2,<5.0.0)",
    "scikit-image (>=0.25.1,<0.26.0)",
    "librosa (>=0.10.2.post1,<0.11.0)",
    "pymupdf (>=1.25.3,<2.0.0)",
    "chardet (>=5.2.0,<6.0.0)",
    "playwright (>=1.50.0,<2.0.0)",
    "backoff (>=2.2.1,<3.0.0)",
    "formulas (>=1.2.8,<2.0.0)",
    "pydrive (>=1.3.1,<2.0.0)",
    "fastdtw (>=0.3.4,<0.4.0)",
    "odfpy (>=1.4.1,<2.0.0)",
    "openai (>=1.63.0,<2.0.0)",
    "func-timeout (>=4.3.5,<5.0.0)",
    "beautifulsoup4 (>=4.13.3,<5.0.0)",
    "dashscope (>=1.22.1,<2.0.0)",
    "google-generativeai (>=0.8.4,<0.9.0)",
    "pyyaml (>=6.0.2,<7.0.0)",
    "mutagen (>=1.47.0,<2.0.0)",
    "easyocr (>=1.7.2,<2.0.0)",
    "borb (>=2.1.25,<3.0.0)",
    "pypdf2 (>=3.0.1,<4.0.0)",
    "pdfplumber (>=0.11.5,<0.12.0)",
    "wandb (>=0.19.6,<0.20.0)",
    "wrapt-timeout-decorator (>=1.5.1,<2.0.0)",
    "gdown (>=5.2.0,<6.0.0)",
    "tiktoken (>=0.9.0,<0.10.0)",
    "groq (>=0.18.0,<0.19.0)",
    "boto3 (>=1.36.21,<2.0.0)",
    "azure-identity (>=1.20.0,<2.0.0)",
    "azure-mgmt-compute (>=34.0.0,<35.0.0)",
    "azure-mgmt-network (>=28.1.0,<29.0.0)",
    "docker (>=7.1.0,<8.0.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "colorlog (>=6.9.0,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
